--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@babel/core": "7.22.9",
     "@babel/runtime": "7.22.6",
     "@react-native-community/eslint-config": "2.0.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.3",
     "babel-jest": "26.6.3",
     "eslint": "7.32.0",
-    "jest": "26.6.3",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.67.0",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "^17.0.2"
   },
   "jest": {
     "preset": "react-native"
